--- a/includes/.env
+++ b/includes/.env
@@ -3,9 +3,9 @@ DB_USER=root
 DB_PASS=132465798fa
 DB_NAME=devwebcamp
 
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
-EMAIL_PASS=
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=c19624c40e1a8c
+EMAIL_PASS=9857e98b85180d
 
 HOST=http://localhost:3000
