Mejoras al proyecto

--- a/includes/.env
+++ b/includes/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=132465798fa
-DB_NAME=devwebcamp
+DB_NAME=devwebcamp-on
 
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
